@@ -1,8 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-// In this section you declare where to find the dependencies of your project
+application {
+    mainClass = 'WordCountExample'
+}
+
 repositories {
     mavenCentral()
 }
@@ -15,25 +19,17 @@ sourceSets {
 dependencies {
     implementation 'org.apache.spark:spark-core_2.12:3.5.1'
     implementation 'org.apache.spark:spark-mllib_2.12:3.5.1'
-    implementation 'log4j:log4j:1.2.17'
-    implementation 'org.slf4j:slf4j-api:1.7.32'
-    implementation 'org.slf4j:slf4j-log4j12:1.7.32'
 }
 
-jar {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    zip64 = true
-
-    // specify the main class
-    manifest {
-        attributes 'Main-Class': 'WordCountExample'
-    }
-
-    // include the dependencies in the jar
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-
-    // exclude the signature files due to duplicate entries
-    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+run {
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = [
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.net=ALL-UNNAMED'
+    ]
 }
